@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1.0)
-project(tpanel VERSION 1.3.0)
+project(tpanel VERSION 1.3.1)
 
 find_package(PkgConfig)
 
@@ -30,7 +30,9 @@ include_directories(${EXPAT_INCLUDE_DIRS})
 link_directories(${EXPAT_LIBRARY_DIRS})
 set(LIBS ${LIBS} ${EXPAT_LIBRARIES})
 
-find_package(linphone)
+find_package(Linphone REQUIRED)
+find_library(LINPHONE_LIBRARY NAMES linphone)
+set(LIBS ${LIBS} ${LINPHONE_LIBRARIES})
 
 set(CMAKE_INSTALL_PREFIX /usr)
 set(QT_USE_QTMULTIMEDIA TRUE)
@@ -120,6 +122,6 @@ if(CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
 	target_link_libraries(tpanel stdc++fs)
 endif()
 
-target_link_libraries(tpanel m pthread ssl crypto ftp ${LIBS} ${LIBSKIA_LIBRARY} linphone Qt5::Widgets Qt5::Multimedia Qt5::MultimediaWidgets Qt5::Qml Qt5::QuickWidgets)
+target_link_libraries(tpanel m pthread ssl crypto ftp ${LIBS} ${LIBSKIA_LIBRARY} Qt5::Widgets Qt5::Multimedia Qt5::MultimediaWidgets Qt5::Qml Qt5::QuickWidgets)
 
 install(TARGETS tpanel RUNTIME DESTINATION bin)
