@@ -25,7 +25,7 @@
 
 #define V_MAJOR     1
 #define V_MINOR     3
-#define V_PATCH     0
+#define V_PATCH     1
 
 /**
  * @def TPANEL_VERSION
